Fixed formatting on mobile.

--- a/src/App.css
+++ b/src/App.css
@@ -502,5 +502,9 @@ html, body, #root {
   .tileTitle {
     font-size: 8px;
   }
+
+  .site {
+    width: 90%;
+  }
   
 }
